--- a/PokemonCRUD/Views/Base.lproj/Main.storyboard
+++ b/PokemonCRUD/Views/Base.lproj/Main.storyboard
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="tU1-3Y-xlK">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Home Controller-->
+        <!--Table-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController storyboardIdentifier="HomeController" id="BYZ-38-t0r" customClass="HomeController" customModule="PokemonCRUD" customModuleProvider="target" sceneMemberID="viewController">
@@ -16,67 +17,135 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="POKEMON" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aj7-mA-XjR">
-                                <rect key="frame" x="25" y="94" width="127" height="39"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="POKEMON Table View" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aj7-mA-XjR">
+                                <rect key="frame" x="25.000000000000014" y="79" width="238.33333333333337" height="39"/>
                                 <fontDescription key="fontDescription" name="Noteworthy-Bold" family="Noteworthy" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="238-2X-far">
-                                <rect key="frame" x="25" y="203" width="343" height="615"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="238-2X-far">
+                                <rect key="frame" x="25" y="128" width="343" height="641"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="238-2X-far" firstAttribute="top" secondItem="aj7-mA-XjR" secondAttribute="bottom" constant="70" id="2JN-jV-Hb6"/>
-                            <constraint firstItem="aj7-mA-XjR" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="35" id="4Sv-w5-tvh"/>
+                            <constraint firstItem="238-2X-far" firstAttribute="top" secondItem="aj7-mA-XjR" secondAttribute="bottom" constant="10" id="2JN-jV-Hb6"/>
+                            <constraint firstItem="aj7-mA-XjR" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="4Sv-w5-tvh"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="238-2X-far" secondAttribute="bottom" id="H1Y-ok-lRg"/>
                             <constraint firstItem="238-2X-far" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="25" id="czh-cy-wbS"/>
                             <constraint firstItem="aj7-mA-XjR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="25" id="t1H-LH-Yko"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="238-2X-far" secondAttribute="trailing" constant="25" id="tQe-8c-KUX"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Table" id="WHy-jy-ekv"/>
                     <connections>
                         <outlet property="tableView" destination="238-2X-far" id="VUf-gQ-g2y"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="71" y="-27"/>
+            <point key="canvasLocation" x="970" y="-351"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="ef6-YG-P4V">
+        <!--Collection Controller-->
+        <scene sceneID="Fn7-Ps-J2f">
             <objects>
-                <viewController id="YAC-P3-9jh" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="hcC-gO-aXr">
+                <viewController storyboardIdentifier="CollectionController" id="eyk-vg-zd0" customClass="CollectionController" customModule="PokemonCRUD" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="eRj-Fe-XR9">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="NYb-WY-Zeq">
-                                <rect key="frame" x="76" y="185" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="POKEMON Collection View" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qy8-g7-0Mk">
+                                <rect key="frame" x="25" y="80" width="285" height="39"/>
+                                <fontDescription key="fontDescription" name="Noteworthy-Bold" family="Noteworthy" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="QK7-7w-hIB">
+                                <rect key="frame" x="0.0" y="129" width="393" height="640"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="Uk6-n1-IOD">
-                                        <rect key="frame" x="0.0" y="50" width="240" height="43.666667938232422"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Uk6-n1-IOD" id="oNJ-Ie-CwK">
-                                            <rect key="frame" x="0.0" y="0.0" width="240" height="43.666667938232422"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="OTi-GE-wbS">
+                                    <size key="itemSize" width="170" height="160"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <view key="backgroundView" contentMode="scaleToFill" id="H6m-rU-zGu">
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="640"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                </view>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="FIX-bM-2Px">
+                                        <rect key="frame" x="0.0" y="0.0" width="170" height="160"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="NYX-O9-PGQ">
+                                            <rect key="frame" x="0.0" y="0.0" width="170" height="160"/>
                                             <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="170" height="160"/>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="SZW-Nd-K1X"/>
+                        <viewLayoutGuide key="safeArea" id="Lvp-6v-leD"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="QK7-7w-hIB" firstAttribute="top" secondItem="qy8-g7-0Mk" secondAttribute="bottom" constant="10" id="4tc-l3-gIn"/>
+                            <constraint firstItem="qy8-g7-0Mk" firstAttribute="top" secondItem="eRj-Fe-XR9" secondAttribute="top" constant="80" id="JIh-59-X9M"/>
+                            <constraint firstItem="QK7-7w-hIB" firstAttribute="leading" secondItem="Lvp-6v-leD" secondAttribute="leading" id="bEj-FP-5Ma"/>
+                            <constraint firstItem="qy8-g7-0Mk" firstAttribute="leading" secondItem="Lvp-6v-leD" secondAttribute="leading" constant="25" id="g8z-Er-nOQ"/>
+                            <constraint firstItem="Lvp-6v-leD" firstAttribute="bottom" secondItem="QK7-7w-hIB" secondAttribute="bottom" id="ltB-eM-dxg"/>
+                            <constraint firstItem="QK7-7w-hIB" firstAttribute="trailing" secondItem="Lvp-6v-leD" secondAttribute="trailing" id="re7-Mf-fSj"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="mIn-eH-ilf"/>
+                    <connections>
+                        <outlet property="collectionView" destination="QK7-7w-hIB" id="7GK-ok-D0y"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="U3b-wu-bdO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KfT-BL-IsX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="736" y="-31"/>
+            <point key="canvasLocation" x="1895.4198473282443" y="311.97183098591552"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="Zhd-Xs-N7l">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="tU1-3Y-xlK" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="IMc-Q1-KtW">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="CSW-AE-YzV"/>
+                        <segue destination="WRf-JH-wys" kind="relationship" relationship="viewControllers" id="moZ-2m-Ypk"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Hbk-qJ-XpT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="70.992366412213741" y="-27.464788732394368"/>
+        </scene>
+        <!--Collection-->
+        <scene sceneID="NVw-h6-PU2">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="WRf-JH-wys" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Collection" id="q4Y-2d-dHX"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="JMm-i0-ZJm">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="eyk-vg-zd0" kind="relationship" relationship="rootViewController" id="TJk-Nd-Pca"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cNQ-Wv-OvK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="968.70229007633588" y="311.97183098591552"/>
         </scene>
     </scenes>
     <resources>
