--- a/PokemonCRUD/Views/DetailView.storyboard
+++ b/PokemonCRUD/Views/DetailView.storyboard
@@ -26,12 +26,6 @@
                                             <constraint firstAttribute="height" constant="150" id="W4b-ez-odb"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ID" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zFP-mr-wOZ">
-                                        <rect key="frame" x="329.33333333333331" y="67" width="28.666666666666686" height="48"/>
-                                        <fontDescription key="fontDescription" name="Noteworthy-Bold" family="Noteworthy" pointSize="30"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CI1-F5-RKY">
                                         <rect key="frame" x="298" y="213" width="70" height="70"/>
                                         <constraints>
@@ -44,15 +38,22 @@
                                             <action selector="favorite:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="T6y-JK-GWx"/>
                                         </connections>
                                     </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ID" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zFP-mr-wOZ">
+                                        <rect key="frame" x="25" y="224" width="28.666666666666671" height="48"/>
+                                        <fontDescription key="fontDescription" name="Noteworthy-Bold" family="Noteworthy" pointSize="30"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="0.80000000000000004" blue="0.0" alpha="0.70423737582781454" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="300" id="48l-EA-TA1"/>
                                     <constraint firstAttribute="bottom" secondItem="CI1-F5-RKY" secondAttribute="bottom" constant="17" id="7Eb-dU-GRV"/>
+                                    <constraint firstAttribute="bottom" secondItem="zFP-mr-wOZ" secondAttribute="bottom" constant="28" id="83B-Ok-tVA"/>
                                     <constraint firstAttribute="trailing" secondItem="CI1-F5-RKY" secondAttribute="trailing" constant="25" id="9CR-LM-lZT"/>
-                                    <constraint firstItem="zFP-mr-wOZ" firstAttribute="top" secondItem="KJ5-ch-Bty" secondAttribute="top" constant="67" id="N1L-hM-Mba"/>
-                                    <constraint firstAttribute="trailing" secondItem="zFP-mr-wOZ" secondAttribute="trailing" constant="35" id="P9Z-Fw-iIN"/>
                                     <constraint firstItem="lq4-Nl-9us" firstAttribute="top" secondItem="KJ5-ch-Bty" secondAttribute="top" constant="120" id="U3W-Rr-NVh"/>
+                                    <constraint firstItem="zFP-mr-wOZ" firstAttribute="top" secondItem="KJ5-ch-Bty" secondAttribute="top" constant="224" id="bGm-Fv-iS7"/>
+                                    <constraint firstItem="zFP-mr-wOZ" firstAttribute="leading" secondItem="KJ5-ch-Bty" secondAttribute="leading" constant="25" id="flQ-Hv-Kep"/>
                                     <constraint firstItem="lq4-Nl-9us" firstAttribute="leading" secondItem="KJ5-ch-Bty" secondAttribute="leading" constant="70" id="gV1-lK-KLR"/>
                                 </constraints>
                             </view>
@@ -133,6 +134,7 @@
                     <connections>
                         <outlet property="aboutSegementView" destination="7cq-Et-Ezf" id="w2S-m7-oEi"/>
                         <outlet property="baseStatsSegmentView" destination="dxl-FF-bI5" id="UJg-mz-2wT"/>
+                        <outlet property="favoriteButton" destination="CI1-F5-RKY" id="v42-wd-p1J"/>
                         <outlet property="id" destination="zFP-mr-wOZ" id="ccc-tN-QU0"/>
                         <outlet property="image" destination="lq4-Nl-9us" id="Rd2-QG-DaR"/>
                         <outlet property="isiAbility" destination="Fwg-pd-zEL" id="ZSy-P4-lfD"/>
